# Bookish

./: .env  .env.template  file.csv  pyproject.toml  wsgi.py
bookish/: app.py
bookish/controllers/: __init__.py  bookish.py
bookish/models/: example.py
client/: package-lock.json  package.json
client/src/: index.css  index.js
client/src/components/: AddBookTab.js  AddUserTab.js  ApiService.js  App.js  BorrowBookTab.js  Button.js  ListOfBooksTab.js  SearchBookTab.js
client/src/components/homePage/: HomeComponents.js  HomePage.jsx
kuppa/: app.py  config.py
kuppa/controllers/: __init__.py  bookish.py
kuppa/models/: book.py
migrations/versions/: ebed79f18aea_.py
